Timeline fixes